force-app/main/default/objects/Insurance_Policy__c/fields/Days_To_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Expiry__c</fullName>
    <label>Days To Expiry</label>
    <formula>Expiry_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>