force-app/main/default/objects/Insurance_Policy__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name__c</fullName>
    <label>Policy Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>