force-app/main/default/objects/Insurance_Policy__c/fields/Yardi_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Policy_Id__c</fullName>
    <label>Yardi Policy Id</label>
    <externalId>true</externalId>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>